# ESP32-Rust-push-knob-smart-lcd-rotary-module

./: Cargo.toml  README.md  diagram.json  wokwi.toml
enclosure/: test-rotary-lcd-enclosure.scad  test-rotary-lcd-enclosure.stl
src/: main.rs  push_button.rs  rotencoder.rs
